Add properties in get /filters
